--- a/src/components/motoCard/ImageCarousel.css
+++ b/src/components/motoCard/ImageCarousel.css
@@ -1,7 +1,7 @@
 .carousel {
   position: relative;
-  width: 100%;
-  height: 60%; /* Defina uma altura fixa para o carrossel */
+  height: auto; /* Defina uma altura fixa para o carrossel */
+  width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,15 +9,11 @@
   background-color: #f0f0f0; /* Adicione um fundo para garantir visibilidade caso a imagem não ocupe todo o espaço */
 }
 
-.carousel__image-container {
+.carousel img {
   width: 100%;
-  height: 100%;
-}
-
-.carousel__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Garante que a imagem cubra todo o contêiner mantendo a proporção */
+  height: 50dvh;
+  display: inline-block;
+  pointer-events: none;
 }
 
 .carousel__button {
@@ -25,7 +21,7 @@
   top: 50%;
   transform: translateY(-50%);
   background: rgba(0, 0, 0, 0.5);
-  color: white;
+  color: rgb(255, 255, 255);
   border: none;
   padding: 10px;
   cursor: pointer;
@@ -65,5 +61,5 @@
 }
 
 .carousel__indicator.active {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
