--- a/src/components/carouselPainel/Carousel.module.css
+++ b/src/components/carouselPainel/Carousel.module.css
@@ -1,15 +1,12 @@
-.carousel-wrapper {
-  margin: 10px auto;
-}
-
-.carousel .carousel-slide {
+.carousel .carousel_slide {
   display: flex;
+  margin: 10px auto; /* Talve retirar */
   justify-content: center;
   align-items: center;
   height: 600px; /* Altura fixa */
 }
 
-.carousel .carousel-slide img {
+.carousel .carousel_slide img {
   width: 100%;
   height: 100%;
   object-fit: inherit;
